@@ -511,20 +511,20 @@ void CWebServer::ProcessURL(ThreadData Data) {
 			pThis->m_Params.Sessions.Add(ses);
 			login = true;
 			pThis->webInterface->Show(wxT("*** logged in as admin\n"));
-		} else if (pThis->webInterface->m_AllowGuest &&
-			 ((PwHash == pThis->webInterface->m_GuestPass) || (PwStr.IsEmpty() && pThis->webInterface->m_GuestPass.IsEmpty())) ) {
-				Session* ses = new Session();
-				ses->admin = false;
-				ses->startTime = time(NULL);
-				ses->lSession = lSession = rand() * 10000L + rand();
-				pThis->m_Params.Sessions.Add(ses);
-				login = true;
-				pThis->webInterface->Show(wxT("*** logged in as guest\n"));
+		} else if ( (pThis->webInterface->m_AllowGuest) &&
+				( (PwHash == pThis->webInterface->m_GuestPass) || (PwStr.IsEmpty() && pThis->webInterface->m_GuestPass.IsEmpty()) )) {
+			Session* ses = new Session();
+			ses->admin = false;
+			ses->startTime = time(NULL);
+			ses->lSession = lSession = rand() * 10000L + rand();
+			pThis->m_Params.Sessions.Add(ses);
+			login = true;
+			pThis->webInterface->Show(wxT("*** logged in as guest\n"));
 		} else {
 			// This call to ::GetTickCount has segfaulted once with this == 0x0, because
 			// wxUSE_GUI was set to 1 in a console only application. This may happen due
 			// to wrong wxWidgets configuration.
-			// 
+			//
 			// save failed attempt (ip,time)
 			TransferredData newban = {inet_addr((char*) ip.GetData()), ::GetTickCount()}; 
 			pThis->m_Params.badlogins.Add(&newban);
